<resources>
    <string name="app_name">Mazoku</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="splash">Mazoku</string>
    <string name="menu_settings">Settings</string>
    <string name="timerVal">"  00:00:00"</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="menuButtonLabel">Menu</string>
    <string name="previousGameLabel">&lt;</string>
    <string name="nextGameLabel">&gt;</string>
    <string name="finished_text">Level cleared</string>
    <string name="finished_button">Cool</string>
    <string name="dummy_content">MAZOKU</string>
    <string name="dummy_button">""</string>
    <string name="title_activity_intro_screen">Play Mazoku</string>
    <string name="title_activity_splash">Splash</string>
    <string name="mazeNumber">"01/10  "</string>

    <string name="recordEasy1">"1 : 99:59:999"</string>
    <string name="recordEasy2">"2 : 99:59:999"</string>
    <string name="recordEasy3">"3 : 99:59:999"</string>

    <string name="recordMedium1">"1 : 99:59:999"</string>
    <string name="recordMedium2">"2 : 99:59:999"</string>
    <string name="recordMedium3">"3 : 99:59:999"</string>

    <string name="recordHard1">"1 : 99:59:999"</string>
    <string name="recordHard2">"2 : 99:59:999"</string>
    <string name="recordHard3">"3 : 99:59:999"</string>

    <string name="recordEasy">"1 : 99:59:999"</string>
    <string name="recordMedium">"2 : 99:59:999"</string>
    <string name="recordHard">"3 : 99:59:999"</string>

    <string name="TextEasy">"*"</string>
    <string name="TextMedium">"**"</string>
    <string name="TextHard">"***"</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="playButtonText">"Play"</string>


</resources>
