<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.f.testmenu.MenuActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/palette1_seablue">

        <ListView
            android:id="@+id/listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:drawSelectorOnTop="false"
            />

    <TextView android:id="@+id/SplashTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/hamburgerheaven"
        android:text=" Mazoku"
        android:textColor="@color/palette1_lightgrey"
        android:textSize="50sp"
        android:textStyle="bold" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:background="@color/palette1_darkergrey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/TextEasy"
                android:textColor="@color/white"
                android:gravity="center"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>

            <Button
                android:id="@+id/EasyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/playButtonText"/>

            <TextView
                android:id="@+id/recordEasy1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="18dp"
                android:text="@string/recordEasy1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/recordEasy2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="18dp"
                android:text="@string/recordEasy2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/recordEasy3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="18dp"
                android:text="@string/recordEasy3"
                android:textColor="@color/black" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/palette1_lightgrey" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:background="@color/palette1_darkergrey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/TextMedium"
                android:textColor="@color/white"
                android:gravity="center"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>

            <Button
                android:id="@+id/MediumButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/playButtonText" />

            <TextView
                android:id="@+id/recordMedium1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="18dp"
                android:text="@string/recordEasy1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/recordMedium2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="18dp"
                android:text="@string/recordEasy2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/recordMedium3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="18dp"
                android:text="@string/recordEasy3"
                android:textColor="@color/black" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/palette1_lightgrey" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:background="@color/palette1_darkergrey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/TextHard"
                android:textColor="@color/white" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>

            <Button
                android:id="@+id/HardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/playButtonText" />

            <TextView
                android:id="@+id/recordHard1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="18dp"
                android:text="@string/recordEasy1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/recordHard2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="18dp"
                android:text="@string/recordEasy2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/recordHard3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="18dp"
                android:text="@string/recordEasy3"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>


    </LinearLayout>






</android.support.constraint.ConstraintLayout>
